# labrat

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.IN  PULL_REQUEST_TEMPLATE.md  README.md  labrat.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test-build.yml
docs/: api.md  cli.md  index.md  installation.md
files/: Items for Plasmid Purification.xlsx  Lab Supplies - Order Tracker.xlsx  Vallender Lab Inventory Catalog v1.xlsx  Vallender Lab Inventory Catalog v2.xlsx
labrat/: DNA Analysis  Protein Analysis  __init__.py  cli.py  utils.py
labrat/bioinformatics/: __init__.py  enrichment.py  gene.py  variant.py
labrat/filemanager/: __init__.py  archive.py  backup.py  backup_docs.py  cleanup.py  folder_cleanup.py  organize.py  startup.py
labrat/genetics/: Protein_Analysis  codons.json  dna_analysis.py  protein_analysis.py
labrat/glossary/: __init__.py  external.py  terms.py
labrat/inventory/: lab_inventory_examples.xlsx
labrat/math/: README.md  __init__.py  functions.py
labrat/project/: __init__.py  projectmanager.py
labrat/reports/: __init__.py  generator.py  templates.py
labrat/tests/: test_backup.py
labrat/wetlab/: __init__.py  buffers.py  dilutions.py  output.py  pcr.py
scripts/: backup_documents.py  folder_cleanup.py  startup.py
tests/: test_archiver.py  test_backup.py  test_cli.py  test_file_organizer.py  test_glossary.py  test_math_functions.py  test_project_manager.py  test_protein_analysis.py  test_reports.py  test_wetlab.py
